--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.cloud.gcp.sql.databaseName=saveme
 spring.cloud.gcp.sql.instance-connection-name=savemedoc-2018:us-central1:saveme-doc-storage
 spring.datasource.username=root
 spring.datasource.password=easycloudcomputing
-spring.cloud.gcp.credentials.location=classpath:/savemedoc.json
+#spring.cloud.gcp.credentials.location=classpath:/savemedoc.json
 spring.datasource.url=jdbc:mysql://google/saveme?cloudSqlInstance=savemedoc-2018:us-central1:saveme-doc-storage&socketFactory=com.google.cloud.sql.mysql.SocketFactory&useSSL=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
